Sun Dec 29 19:51:11 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Add commas between short and long options in usage
	  output.

	* src/accessdb.c (main): Support -h/--help and -v/--version options.
	  (usage): Document them. Move MAN_DB outside translatable string.
	* man/man8/accessdb.man8 (SYNOPSIS, OPTIONS): Document new options.
	  (AUTHOR): Add myself.
	* src/globbing.c (long_options, args, main): Support -h/--help and
	  -v/--version options.
	  (usage): New function.
	* zsoelim/zsoelim.l: Support long option forms of -C (--compatible),
	  -h (--help), and -V (--verbose).
	* man/man1/zsoelim.man1: Document long options.

	* src/Makefile.in: Link $(TOOLS) as well as $(PROGS) with version.o.

Sun Dec 29 19:40:46 GMT 2002  Colin Watson  <cjwatson@debian.org>

	Patch partly by Werner Fink <werner@suse.de>.

	* src/whatis.c (args, long_options): Add -v/--verbose option.
	  (usage): Document it.
	  (get_whatis): Print pointer loop warnings only if --verbose.
	  (main): Handle --verbose option.
	* man/man1/apropos.man1 (OPTIONS): Document --verbose.
	* man/man1/whatis.man1 (OPTIONS): Likewise.

Sun Dec 22 23:30:12 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (test_manfile): Initialize the mandata struct
	  on the stack to zero.
	  (count_glob_matches): Likewise.
	* src/straycats.c (check_for_stray): Likewise.
	* src/man.c (try_section): Use infoalloc() (which initializes the
	  mandata struct to zero) rather than malloc(). This had caused
	  several uses of uninitialized memory (Debian bug #168584).

	* src/check_mandirs (purge_whatis): Compare info->pointer against
	  "-", not just its first character.

Sun Dec 22 19:29:38 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.1.
	* docs/NEWS, man-db.gnu, man-db.lsm: Update.

Sun Dec 22 18:19:09 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_btree.c (btree_findkey): Cast key.dsize to int when using
	  it as an fprintf() field width.
