@@ -47,6 +47,8 @@
 
 #include "sys/time.h"	/* for time_t */
 
+#include "libdb/mydbm.h"
+
 struct mandata {
 	struct mandata *next;		/* ptr to next structure, if any */
 	char *addr;			/* ptr to memory containing the fields */
